Fix class RoleConverter

--- a/controller-module/src/main/resources/templates/users.html
+++ b/controller-module/src/main/resources/templates/users.html
@@ -13,6 +13,7 @@ all users
     <td th:text="${user.lastName}" />
     <td th:text="${user.firstName}" />
     <td th:text="${user.email}" />
+    <td th:text="${user.role}" />
 </tr>
 </tbody>
 </body>
