--- a/controller-module/src/main/resources/templates/users.html
+++ b/controller-module/src/main/resources/templates/users.html
@@ -3,18 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <title>Users</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-all users
-<tbody>
-<tr th:each="user: ${users}">
-    <td th:text="${user.id}" />
-    <td th:text="${user.lastName}" />
-    <td th:text="${user.firstName}" />
-    <td th:text="${user.email}" />
-    <td th:text="${user.role}" />
-</tr>
-</tbody>
+<table class="table table-striped">
+    <thead class="thead-dark">
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">ID</th>
+        <th scope="col">LastName</th>
+        <th scope="col">MiddleName</th>
+        <th scope="col">FirstName</th>
+        <th scope="col">Email</th>
+        <th scope="col">Role</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="user, itemStat: ${users}">
+        <th scope="row" th:text="${itemStat.index}+1"/>
+        <td th:text="${user.id}"/>
+        <td th:text="${user.lastName}"/>
+        <td th:text="${user.middleName}"/>
+        <td th:text="${user.firstName}"/>
+        <td th:text="${user.email}"/>
+        <td th:text="${user.role}"/>
+    </tr>
+    </tbody>
+</table>
+<div>
+    <th:block th:if="${pages}>0"
+              th:each="pageNumber:${#numbers.sequence(1,pages)}">
+        <a th:href="@{/users?number={page}(page=${pageNumber-1})}">
+            <span th:text="${pageNumber}">...</span></a>
+    </th:block>
+</div>
 </body>
 </html>
