Create deleteUsersByIds flow

--- a/controller-module/src/main/resources/templates/users.html
+++ b/controller-module/src/main/resources/templates/users.html
@@ -28,6 +28,7 @@
         <td th:text="${user.firstName}"/>
         <td th:text="${user.email}"/>
         <td th:text="${user.role}"/>
+        <td><input type="checkbox" name="ids" value="${user.id}"></td>
     </tr>
     </tbody>
 </table>
