--- a/controller-module/src/main/resources/templates/users.html
+++ b/controller-module/src/main/resources/templates/users.html
@@ -28,7 +28,15 @@
         <td th:text="${user.firstName}"/>
         <td th:text="${user.email}"/>
         <td th:text="${user.role}"/>
-        <td><input type="checkbox" name="ids" value="${user.id}"></td>
+        <td>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" name="usersIds" th:value="${user.id}" id="deleteUserCheckBox"
+                       form="Delete users">
+                <label class="form-check-label" for="deleteUserCheckBox">
+                    Delete user
+                </label>
+            </div>
+        </td>
     </tr>
     </tbody>
 </table>
@@ -39,5 +47,10 @@
             <span th:text="${pageNumber}">...</span></a>
     </th:block>
 </div>
+<form id="Delete users" action="/users/delete" method="post">
+    <button type="submit" class="btn btn-primary">
+        Delete selected users
+    </button>
+</form>
 </body>
 </html>
