Fix unit and integration tests addUserTest()

--- a/controller-module/src/main/resources/templates/user.html
+++ b/controller-module/src/main/resources/templates/user.html
@@ -14,27 +14,29 @@
     <div class="form-row">
         <div class="form-group col-md-6">
             <label for="email">Email</label>
-            <input type="email" class="form-control" id="email" name="email">
+            <input type="email" class="form-control" id="email" name="email"
+                   placeholder="Enter the new user's email (Max 50 symbols)">
         </div>
         <div class="form-group col-md-6">
             <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password">
+            <input type="password" class="form-control" id="password" name="password"
+                   placeholder="Enter the new user's password (8 symbols)">
         </div>
     </div>
     <div class="form-group">
         <label for="lastName">Last name</label>
         <input type="text" class="form-control" id="lastName" name="lastName"
-               placeholder="Enter the new user's last name">
+               placeholder="Enter the new user's last name (Max 40 symbols. Only latin letters)">
     </div>
     <div class="form-group">
         <label for="middleName">Middle name</label>
         <input type="text" class="form-control" id="middleName" name="middleName"
-               placeholder="Enter the new user's middle name">
+               placeholder="Enter the new user's middle name (Max 40 symbols. Only latin letters)">
     </div>
     <div class="form-group">
         <label for="firstName">First name</label>
         <input type="text" class="form-control" id="firstName" name="firstName"
-               placeholder="Enter the new user's first name">
+               placeholder="Enter the new user's first name (Max 20 symbols. Only latin letters)">
     </div>
     <div class="form-row">
         <div class="form-group col-md-4">
