--- a/controller-module/src/main/resources/templates/reviews.html
+++ b/controller-module/src/main/resources/templates/reviews.html
@@ -1,10 +1,63 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Reviews</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+          integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-
+<div>
+    <h1>All reviews <span class="badge badge-pill badge-success">ONLINE STORE</span></h1>
+</div>
+<table class="table table-striped">
+    <thead class="thead-dark">
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">ID</th>
+        <th scope="col">Last name</th>
+        <th scope="col">Middle name</th>
+        <th scope="col">First name</th>
+        <th scope="col">Content</th>
+        <th scope="col">Creation time</th>
+        <th scope="col">Displayed</th>
+        <th scope="col"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="review, itemStat: ${reviews}">
+        <th scope="row" th:text="${itemStat.index}+1"/>
+        <td th:text="${review.id}"/>
+        <td th:text="${review.user.lastName}"/>
+        <td th:text="${review.user.middleName}"/>
+        <td th:text="${review.user.firstName}"/>
+        <td th:text="${review.content}"/>
+        <td th:text="${review.creationTime}"/>
+        <td th:text="${review.isDisplayed}"/>
+        <td>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox"
+                       name="reviewsIds" th:value="${review.id}" id="deleteReviewCheckBox"
+                       form="Delete reviews">
+                <label class="form-check-label" for="deleteReviewCheckBox">
+                    Delete review
+                </label>
+            </div>
+        </td>
+    </tr>
+    </tbody>
+</table>
+<div>
+    <th:block th:if="${pages}>0"
+              th:each="pageNumber:${#numbers.sequence(1,pages)}">
+        <a th:href="@{/reviews?number={page}(page=${pageNumber-1})}">
+            <span th:text="${pageNumber}">...</span></a>
+    </th:block>
+</div>
+<form id="Delete reviews" action="/reviews/delete" method="post">
+    <button type="submit" class="btn btn-primary">
+        Delete selected reviews
+    </button>
+</form>
 </body>
 </html>
