--- a/controller-module/src/main/resources/templates/reviews.html
+++ b/controller-module/src/main/resources/templates/reviews.html
@@ -22,6 +22,8 @@
         <th scope="col">Creation time</th>
         <th scope="col">Displayed</th>
         <th scope="col"></th>
+        <th scope="col"></th>
+        <th scope="col"></th>
     </tr>
     </thead>
     <tbody>
@@ -34,6 +36,13 @@
         <td th:text="${review.content}"/>
         <td th:text="${review.creationTime}"/>
         <td th:text="${review.isDisplayed}"/>
+        <td>
+            <form th:if="${review.isDisplayed == true}" id="Do not display" action="/reviews/hidden" method="post">
+                <button type="submit" class="btn btn-warning" name="reviewId" th:value="${review.id}">
+                    Make review hidden
+                </button>
+            </form>
+        </td>
         <td>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox"
