--- a/controller-module/src/main/resources/templates/login.html
+++ b/controller-module/src/main/resources/templates/login.html
@@ -7,15 +7,34 @@
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
-<form>
+<script type="text/javascript">
+function validate() {
+    if (document.login.email.value == "" && document.login.password.value == "") {
+        alert("Username and password are required");
+        document.login.email.focus();
+        return false;
+    }
+    if (document.login.email.value == "") {
+        alert("Username is required");
+        document.login.email.focus();
+        return false;
+    }
+    if (document.login.password.value == "") {
+	alert("Password is required");
+	document.login.password.focus();
+        return false;
+    }
+}
+</script>
+<form name="login">
     <div class="form-group">
         <label for="exampleInputEmail1">Email</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
         <small id="emailHelp" class="form-text text-muted"></small>
     </div>
     <div class="form-group">
         <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <input type="password" name="password" class="form-control" id="exampleInputPassword1">
     </div>
     <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
