--- a/controller-module/src/main/resources/templates/error.html
+++ b/controller-module/src/main/resources/templates/error.html
@@ -2,23 +2,36 @@
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Error</title>
+    <title>Errors</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 </head>
 <body>
 <div>
-    <p>Errors</p>
+    <h1>Errors <span class="badge badge-pill badge-success">ONLINE STORE</span></h1>
 </div>
-<div>
-    <table>
-        <th:block th:each="error: ${errors}">
-            <tr>
-                <td th:text="${error.fieldName}"/>
-                <td th:text="${error.message}"/>
-            <tr/>
-        </th:block>
-    </table>
-</div>
+<table class="table table-striped">
+    <thead class="thead-dark">
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Name of parameter</th>
+        <th scope="col">Description of error</th>
+    </tr>
+    </thead>
+    <tbody>
+    <th:block th:each="error, itemStat: ${errors}">
+        <tr>
+            <th scope="row" th:text="${itemStat.index}+1"/>
+            <td th:text="${error.fieldName}"/>
+            <td th:text="${error.message}"/>
+        <tr/>
+    </th:block>
+    </tbody>
+</table>
+<form action="/admin/users">
+    <button type="submit" class="btn btn-primary">
+        Go back to the page "All users"
+    </button>
+</form>
 </body>
 </html>
