--- a/controller-module/src/main/resources/templates/user.html
+++ b/controller-module/src/main/resources/templates/user.html
@@ -49,7 +49,7 @@
             </select>
         </div>
     </div>
-    <button type="submit" formaction="/users/add" formmethod="post" class="btn btn-primary">Add user</button>
+    <button type="submit" formaction="/admin/users/add" formmethod="post" class="btn btn-primary">Add user</button>
 </form>
 </body>
 </html>
