--- a/controller-module/src/main/resources/templates/user.html
+++ b/controller-module/src/main/resources/templates/user.html
@@ -51,5 +51,10 @@
     </div>
     <button type="submit" formaction="/admin/users/add" formmethod="post" class="btn btn-primary">Add user</button>
 </form>
+<p></p>
+<div>
+    <a href="/admin/users" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">Go back to the page "All
+        users"</a>
+</div>
 </body>
 </html>
