--- a/controller-module/src/main/resources/templates/article.html
+++ b/controller-module/src/main/resources/templates/article.html
@@ -8,19 +8,58 @@
 </head>
 <body>
 <div>
-    <h1 th:text="${article.title}"><span class="badge badge-pill badge-success">ONLINE STORE</span></h1>
+    <h1>The article<span class="badge badge-pill badge-success">ONLINE STORE</span></h1>
 </div>
+<table class="table table-striped">
+    <thead class="thead-dark">
+    <tr>
+        <th scope="col">Creation time</th>
+        <th scope="col">Title</th>
+        <th scope="col">Content</th>
+        <th scope="col">Author's last name</th>
+        <th scope="col">Author's first name</th>
+        <th scope="col"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td th:text="${article.creationTime}"/>
+        <td th:text="${article.title}"/>
+        <td th:text="${article.content}"/>
+        <td th:text="${article.user.lastName}"/>
+        <td th:text="${article.user.firstName}"/>
+    </tr>
+    </tbody>
+</table>
+
 <div>
-    <p th:text="${article.creationTime}"></p>
+    <h1>Comments on the article <span class="badge badge-pill badge-success">ONLINE STORE</span></h1>
 </div>
+<table class="table table-striped">
+    <thead class="thead-dark">
+    <tr>
+        <th scope="col">#</th>
+        <th scope="col">Сommentator's last name</th>
+        <th scope="col">Сommentator's first name</th>
+        <th scope="col">Creation time</th>
+        <th scope="col">Comment</th>
+        <th scope="col"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:each="comment, itemStat: ${comments}">
+        <th scope="row" th:text="${itemStat.index}+1"/>
+        <td th:text="${comment.user.lastName}"/>
+        <td th:text="${comment.user.firstName}"/>
+        <td th:text="${comment.creationTime}"/>
+        <td th:text="${comment.content}"/>
+    </tr>
+    </tbody>
+</table>
+<p></p>
 <div>
-    <p th:text="${article.content}"></p>
-</div>
-<div>
-    <p th:text="${article.user.lastName}"></p>
-</div>
-<div>
-    <p th:text="${article.user.firstName}"></p>
+    <a href="/customer/articles" class="btn btn-dark btn-lg active" role="button" aria-pressed="true">Go back to the
+        page "All articles"</a>
 </div>
 </body>
 </html>
