--- a/controller-module/src/main/resources/templates/articles.html
+++ b/controller-module/src/main/resources/templates/articles.html
@@ -33,6 +33,16 @@
         <td>
             <a th:href="@{/customer/articles/{id}(id=${article.id})}">More detailed...</a>.
         </td>
+        <td>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox"
+                       name="articlesIds" th:value="${article.id}" id="deleteArticleCheckBox"
+                       form="Delete articles">
+                <label class="form-check-label" for="deleteArticleCheckBox">
+                    Delete articles
+                </label>
+            </div>
+        </td>
     </tr>
     </tbody>
 </table>
@@ -43,5 +53,10 @@
             <span th:text="${pageNumber}">...</span></a>
     </th:block>
 </div>
+<form id="Delete articles" action="/sale/articles/delete" method="post">
+    <button type="submit" class="btn btn-primary">
+        Delete selected articles
+    </button>
+</form>
 </body>
 </html>
