--- a/controller-module/src/main/resources/templates/articleform.html
+++ b/controller-module/src/main/resources/templates/articleform.html
@@ -14,7 +14,7 @@
     <div class="form-group">
         <label for="creationTime">Сreation time</label>
         <input type="text" class="form-control" id="creationTime" name="creationTime"
-               placeholder="Enter the time when the article was created">
+               placeholder="Enter the time when the article was created. Date format: 04-03-2021 14:25:13">
     </div>
     <div class="form-group">
         <label for="title">Title</label>
@@ -22,14 +22,14 @@
                placeholder="Enter the title of the article">
     </div>
     <div class="form-group">
+        <label for="summary">Summary</label>
+        <input type="text" class="form-control" id="summary" name="summary"
+        placeholder="Enter the summary of the article">
+    </div>
+    <div class="form-group">
         <label for="content">Content</label>
         <input type="text" class="form-control" id="content" name="content"
                placeholder="Enter the full content of the article">
-    </div>
-    <div class="form-group">
-        <label for="summary">Summary</label>
-        <input type="text" class="form-control" id="summary" name="summary"
-               placeholder="Enter the summary of the article">
     </div>
     <button type="submit" formaction="/sale/articles/add" formmethod="post" class="btn btn-primary">Add articles</button>
 </form>
