Create test flow deleteItemsByIdsTest()

--- a/controller-module/src/main/resources/templates/items.html
+++ b/controller-module/src/main/resources/templates/items.html
@@ -38,7 +38,7 @@
                        name="itemsIds" th:value="${item.id}" id="deleteItemCheckBox"
                        form="Delete items">
                 <label class="form-check-label" for="deleteItemCheckBox">
-                    Delete items
+                    Delete item
                 </label>
             </div>
         </td>
